# ai-content-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: ISSUES_MVP_V1.md
.github/ISSUE_TEMPLATE/: benchmark_task.yml  feature_task.yml  infra_task.yml
evals/datasets/: idea_agent.json  journal_assist.json  remix_agent.json  seo_agent.json  writer_agent.json
src/ai_content_agent/: __init__.py  app.py  embeddings.py  github_activity.py  journal_schema.py  journal_sessions.py  llm.py  main.py  model_telemetry.py  observability.py  prompts.py  settings.py  telegram.py
src/ai_content_agent/agents/: __init__.py  journal_assist.py  remix_agent.py  runtime.py  seo_agent.py  writer_agent.py
src/ai_content_agent/benchmarks/: __init__.py  __main__.py  datasets.py  runner.py  validators.py
src/ai_content_agent/repositories/: checkpoints.py  draft_history.py  github_activity.py  journal_entries.py  post_history.py  retrieval.py
src/ai_content_agent/services/: checkpoints.py  content_workflow.py  draft_history.py  github_activity.py  github_sync.py  idea_agent.py  journal_entries.py  post_history.py  post_history_records.py  retrieval.py  (+1 more)
tests/: test_benchmarks.py  test_checkpoints.py  test_content_agents.py  test_embeddings.py  test_github_activity.py  test_github_activity_documents.py  test_health.py  test_idea_agent.py  test_integration_dev_flow.py  test_journal_entries.py  test_journal_sessions.py  test_live_ai_smoke.py  test_llm.py  test_manual_api.py  test_model_telemetry.py  test_observability.py  test_post_history.py  test_retrieval.py  test_settings.py  test_telegram_webhook.py
(+7 files in other folders)
