[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ai-content-agent"
version = "0.1.0"
description = "Telegram-first AI content agent for grounded LinkedIn post generation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Adi Roth" }
]
dependencies = [
  "agno>=1.8,<2.0",
  "anthropic>=0.60,<1.0",
  "fastapi>=0.115,<1.0",
  "google-genai>=1.30,<2.0",
  "httpx>=0.28,<1.0",
  "openai>=1.99,<2.0",
  "pymongo>=4.10,<5.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
ai-content-agent = "ai_content_agent.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_content_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
